Changed link names

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 
 			<nav class="expand-navbar">
 				<ul>
-					<a href="index.html"><li>Home</li></a>
+					<a href="index"><li>Home</li></a>
 					<li class="nav-dropdown">
-						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
+						<a href="shop" class="nav-dropdown-btn">Store</a>
 						<ul class="nav-dropdown-content">
-							<a href="shop"><li>All</li></a>
-							<a href="terrariums.html"><li>Terrariums</li></a>
-							<a href="materials.html"><li>Materials</li></a>
-							<a href="plants.html"><li>Plants</li></a>
-							<a href="critters.html"><li>Critters</li></a>
+							<a href="store"><li>All</li></a>
+							<a href="terrariums"><li>Terrariums</li></a>
+							<a href="materials"><li>Materials</li></a>
+							<a href="plants"><li>Plants</li></a>
+							<a href="critters"><li>Critters</li></a>
 						</ul>
 					</li>
-					<a href="PlantCare.html"><li>Plant Care</li></a>
-					<a href="CritterCare.html"><li>Critter Care</li></a>
+					<a href="plant-care"><li>Plant Care</li></a>
+					<a href="critter-care"><li>Critter Care</li></a>
 				</ul>
 			</nav>
 			<nav class="collapse-navbar">
@@ -46,17 +46,17 @@
 			</nav>
 		</div>
 		<ul class="dropdown" id="dropdown">
-			<li><a href="index.html">Home</a></li>
-			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
-			<li style="text-align: center;"><a href="PlantCare.html">Plant<br/>Care</a></li>
-			<li style="text-align: center;"><a href="CritterCare.html">Critter<br/>Care</a></li>
+			<li><a href="index">Home</a></li>
+			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Store</a></li>
+			<li style="text-align: center;"><a href="plant-care">Plant<br/>Care</a></li>
+			<li style="text-align: center;"><a href="critter-care">Critter<br/>Care</a></li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
-			<li><a href="shop.html">All</a></li>
-			<li><a href="terrariums.html">Terrariums</a></li>
-			<li><a href="materials.html">Materials</a></li>
-			<li><a href="plants.html">Plants</a></li>
-			<li><a href="critters.html">Critters</a></li>
+			<li><a href="store">All</a></li>
+			<li><a href="terrariums">Terrariums</a></li>
+			<li><a href="materials">Materials</a></li>
+			<li><a href="plants">Plants</a></li>
+			<li><a href="critters">Critters</a></li>
 		</ul>
 		<div class="title-section">
 			<div class="title-box">
