--- a/critter-care.html
+++ b/critter-care.html
@@ -26,7 +26,7 @@
 				<ul>
 					<a href="index"><li>Home</li></a>
 					<li class="nav-dropdown">
-						<a href="shop" class="nav-dropdown-btn">Store</a>
+						<a href="store" class="nav-dropdown-btn">Store</a>
 						<ul class="nav-dropdown-content">
 							<a href="store"><li>All</li></a>
 							<a href="terrariums"><li>Terrariums</li></a>
@@ -116,7 +116,7 @@
 				<h1><i>Adding Critters To Your Setup</i></h1>
 
 				<h2><u><b>Basic Information</b></u></h2>
-				<p> Provide the culture a week or two to develop before pulling from it. Do not transfer your whole culture into your setup if you plan on reproducing them. If you want to get started with a bioactive setup we offer clean up crews in our shop.</p>
+				<p> Provide the culture a week or two to develop before pulling from it. Do not transfer your whole culture into your setup if you plan on reproducing them. If you want to get started with a bioactive setup we offer clean up crews in our store.</p>
 
 				<br/><br/>
 				<table>
