--- a/terrariums.html
+++ b/terrariums.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Terrariums - Shop - Rainier Terrariums</title>
+		<title>Terrariums - store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -26,7 +26,7 @@
 				<ul>
 					<a href="index"><li>Home</li></a>
 					<li class="nav-dropdown">
-						<a href="shop" class="nav-dropdown-btn">Store</a>
+						<a href="store" class="nav-dropdown-btn">Store</a>
 						<ul class="nav-dropdown-content">
 							<a href="store"><li>All</li></a>
 							<a href="terrariums"><li>Terrariums</li></a>
