--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<ul>
 					<a href="index"><li>Home</li></a>
 					<li class="nav-dropdown">
-						<a href="shop" class="nav-dropdown-btn">Store</a>
+						<a href="store" class="nav-dropdown-btn">Store</a>
 						<ul class="nav-dropdown-content">
 							<a href="store"><li>All</li></a>
 							<a href="terrariums"><li>Terrariums</li></a>
