Added verified seal

--- a/critters.html
+++ b/critters.html
@@ -64,6 +64,7 @@
 							<a href="https://amzn.to/32kKIvu" target="_blank">
 								<img src="images/product18.png" alt="iso" class="product-img">
 								<div class="product-description">
+									<img src="images/verified.png" alt="Quality Verified" class="verified">
 									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
 									<p>$39.99</p>
 								</div>
