Added product pages

--- a/product4.html
+++ b/product4.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Light-up Terrarium Kit for Kids - Store - Rainier Terrariums</title>
+		<title>Adult Venus Flytrap in 4.5" BLUE Terrarium - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,20 +59,20 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product1.jpg" alt="Light-up Terrarium Kit for Kids" class="product-pg-img">
+				<img src="images/product4.jpg" alt='Adult Venus Flytrap in 4.5" BLUE Terrarium' class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>Light-up Terrarium Kit for Kids with LED Light on Lid - Create Your Own Customized Mini Garden in a Jar That Glows at Night - Great Science Kits - Gardening Gifts for Children - Kids Toys - Dan&Darci</h2>
-					<h2 style="float: left">$24.99</h2>
-					<a href="https://amzn.to/37XXp0J" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<h2>Adult Venus Flytrap in 4.5" BLUE Terrarium - Carnivorous Plant Fly Trap by Nature Gift Store</h2>
+					<h2 style="float: left">$12.85</h2>
+					<a href="https://amzn.to/2STdtfR" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>🌱 WHAT IS A TERRARIUM? It is a miniature garden within a container that simulates a natural environment. So, let your child discover the beauty of nature by creating their own beautiful terrarium with this all-inclusive kit. Watch as it grows by day and glows at night with the innovative LED light under the lid.</li>
-						<li>💡 GROWS BY DAY, GLOWS AT NIGHT: Beneath the lid, there is a built-in innovative LED light that transforms the experience into something magical. At night, just hit the small switch to turn on the light and watch how your terrarium turns into a gorgeous illuminated tabletop garden. You have to see it to believe it! The light can easily be recharged with the included Micro-USB cable.</li>
-						<li>🔧 KIT INCLUDES: Terrarium jar (4"x6"), light-up jar lid, Micro-USB charging cable, clear and easy step-by-step instruction booklet, vermiculite soil, blue sand, river rocks, wheatgrass and chia seeds, small bunny and mushroom miniatures, removable stickers for decoration, spray bottle, and wooden stick to aid in planting the seeds.</li>
-						<li>🎁 A FUN AND EDUCATIONAL GIFT FOR ALL AGES: It's not often that a science project can be fun and engaging, but this terrarium kit achieves both! It fascinates children as soon as they pull it out of the box. With the freedom to layer the rocks, sand, soil, and stickers as they please, every child is guaranteed to have a blast.</li>
-						<li>🥇 STEM.ORG AUTHENTICATED EDUCATIONAL PRODUCT: This product has been evaluated by STEM.org and has been authenticated to meet the highest standards of STEM learning. 😊 100% SATISFACTION GUARANTEED: Love it, or your money back! We're sure that the child will have a blast, but if you are not satisfied with the kit we'll refund you 100% of the money, no questions asked.</li>
-                    </ul>
+						<li>Live healthy adult sized Venus Flytrap Plant with a 4.5” diameter BLUE terrarium.</li>
+						<li>Will have at least 3 traps on it, ready to gobble a bug!</li>
+						<li>Comes with an easy care sheet and set up for beginners.</li>
+						<li>A ‘death trap’ for insects! These plants ‘trap’ their prey with a clever hair-trigger mechanism. Once trapped, they are slowly digested.</li>
+						<li>GUARANTEED! We guarantee LIVE arrival of your plant. ****DO NOT ORDER if below 40 degrees or above 85 degrees in your area. Our live arrival guaranty will be void if ordered during these temperatures. YOU ARE RESPONSIBLE FOR CHECKING TEMPERATURES IN YOUR AREA to be sure your plant arrives alive.**** We ship this item via USPS (post office) within 4 business days</li>
+					</ul>
 				</div>
             </div>
         </article>
