--- a/product2.html
+++ b/product2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Light-up Terrarium Kit for Kids - Store - Rainier Terrariums</title>
+		<title>Mkono 3 Pack Mini Glass Geometric Terrarium - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,20 +59,20 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product1.jpg" alt="Light-up Terrarium Kit for Kids" class="product-pg-img">
+				<img src="images/product2.jpg" alt="Mkono 3 Pack Mini Glass Geometric Terrarium" class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>Light-up Terrarium Kit for Kids with LED Light on Lid - Create Your Own Customized Mini Garden in a Jar That Glows at Night - Great Science Kits - Gardening Gifts for Children - Kids Toys - Dan&Darci</h2>
-					<h2 style="float: left">$24.99</h2>
-					<a href="https://amzn.to/37XXp0J" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
-                    <br/><br/><br/>
-                    <p class="disclaimer">Manufacturer description</p>
+					<h2>Mkono 4 Inch Mini Glass Geometric Terrarium Container Set of 3 Modern Tabletop Planter Windowsill Decor Shelves DIY Display Box Centerpiece Gift for Succulent Air Plant Miniature Fairy Garden, Gold</h2>
+					<h2 style="float: left">$23.99</h2>
+					<a href="https://amzn.to/2LREg86" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<br/><br/><br/>
+					<p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>🌱 WHAT IS A TERRARIUM? It is a miniature garden within a container that simulates a natural environment. So, let your child discover the beauty of nature by creating their own beautiful terrarium with this all-inclusive kit. Watch as it grows by day and glows at night with the innovative LED light under the lid.</li>
-						<li>💡 GROWS BY DAY, GLOWS AT NIGHT: Beneath the lid, there is a built-in innovative LED light that transforms the experience into something magical. At night, just hit the small switch to turn on the light and watch how your terrarium turns into a gorgeous illuminated tabletop garden. You have to see it to believe it! The light can easily be recharged with the included Micro-USB cable.</li>
-						<li>🔧 KIT INCLUDES: Terrarium jar (4"x6"), light-up jar lid, Micro-USB charging cable, clear and easy step-by-step instruction booklet, vermiculite soil, blue sand, river rocks, wheatgrass and chia seeds, small bunny and mushroom miniatures, removable stickers for decoration, spray bottle, and wooden stick to aid in planting the seeds.</li>
-						<li>🎁 A FUN AND EDUCATIONAL GIFT FOR ALL AGES: It's not often that a science project can be fun and engaging, but this terrarium kit achieves both! It fascinates children as soon as they pull it out of the box. With the freedom to layer the rocks, sand, soil, and stickers as they please, every child is guaranteed to have a blast.</li>
-						<li>🥇 STEM.ORG AUTHENTICATED EDUCATIONAL PRODUCT: This product has been evaluated by STEM.org and has been authenticated to meet the highest standards of STEM learning. 😊 100% SATISFACTION GUARANTEED: Love it, or your money back! We're sure that the child will have a blast, but if you are not satisfied with the kit we'll refund you 100% of the money, no questions asked.</li>
-                    </ul>
+						<li>Simple and elegant appearance designs in 3 different shapes of Globe, Triangle Teardrop and Bowl adds modern and stylish sense to your living surroundings or work space. Beautiful artistic polyhedron terrarium for holding plants like succulent, fern, moss, cacti, tillandsias, air plants, DIY mini fairy garden, artificial plants with easy maintainence or other decorative objects.</li>
+						<li>Great geometrical design complements today's modern decor, adding dainty and chic accent to a room especially when serving as contemporary centerpiece on a coffee table, cabinet, desktop, floating shelves, and windowsills. Perfect display box for weddings, holidays, parties, offices, living home, bedroom, kitchen, Hotel, and home decor.</li>
+						<li>The geometric glass planter is made of pieces of glass blocks and metal frames, it's hard to make sure there are no gaps due to the product process. Be aware that it is NOT water tight - not designed for hydroponic plants, it is recommanded to cover the bottom with small stones before planting and water the plants by spray bottle.</li>
+						<li>Size: Pentagon Globe-shaped is 4.5" in diameter, Opening's diameter is 2.5"; Triangle Teadrop-shaped is 4"W×5"H, Opening's diameter is 4"W x 3"H; Pentagon Bowl-shaped is 4"W×4"H, Opening's diameter is 4". The glass geo cases are suitable for small or young plants. Great gift idea for greenary or art lovers!</li>
+						<li>Package Included: 3× glass terrarium in different shapes. Note: Plants and other decorations are not included. Glass products are fragile, please treat it carefully when using. If you receive the broken item, please contact us for replacement. Mkono is a registered trademark and our product is professional manufacturing and sole selling.</li>
+					</ul>
 				</div>
             </div>
         </article>
