--- a/product6.html
+++ b/product6.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Light-up Terrarium Kit for Kids - Store - Rainier Terrariums</title>
+		<title>Cute Farms Terrarium Starter Kit - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,19 +59,19 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product1.jpg" alt="Light-up Terrarium Kit for Kids" class="product-pg-img">
+				<img src="images/product6.png" alt="Cute Farms Terrarium Starter Kit" class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>Light-up Terrarium Kit for Kids with LED Light on Lid - Create Your Own Customized Mini Garden in a Jar That Glows at Night - Great Science Kits - Gardening Gifts for Children - Kids Toys - Dan&Darci</h2>
-					<h2 style="float: left">$24.99</h2>
-					<a href="https://amzn.to/37XXp0J" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<h2>Cute Farms Terrarium Starter Kit | Moss, Vermiculite, Soil, Pebbles, Plant Food, Finishing Tools (Large Kit)</h2>
+					<h2 style="float: left">$22.95</h2>
+					<a href="https://amzn.to/2SQ38kK" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>🌱 WHAT IS A TERRARIUM? It is a miniature garden within a container that simulates a natural environment. So, let your child discover the beauty of nature by creating their own beautiful terrarium with this all-inclusive kit. Watch as it grows by day and glows at night with the innovative LED light under the lid.</li>
-						<li>💡 GROWS BY DAY, GLOWS AT NIGHT: Beneath the lid, there is a built-in innovative LED light that transforms the experience into something magical. At night, just hit the small switch to turn on the light and watch how your terrarium turns into a gorgeous illuminated tabletop garden. You have to see it to believe it! The light can easily be recharged with the included Micro-USB cable.</li>
-						<li>🔧 KIT INCLUDES: Terrarium jar (4"x6"), light-up jar lid, Micro-USB charging cable, clear and easy step-by-step instruction booklet, vermiculite soil, blue sand, river rocks, wheatgrass and chia seeds, small bunny and mushroom miniatures, removable stickers for decoration, spray bottle, and wooden stick to aid in planting the seeds.</li>
-						<li>🎁 A FUN AND EDUCATIONAL GIFT FOR ALL AGES: It's not often that a science project can be fun and engaging, but this terrarium kit achieves both! It fascinates children as soon as they pull it out of the box. With the freedom to layer the rocks, sand, soil, and stickers as they please, every child is guaranteed to have a blast.</li>
-						<li>🥇 STEM.ORG AUTHENTICATED EDUCATIONAL PRODUCT: This product has been evaluated by STEM.org and has been authenticated to meet the highest standards of STEM learning. 😊 100% SATISFACTION GUARANTEED: Love it, or your money back! We're sure that the child will have a blast, but if you are not satisfied with the kit we'll refund you 100% of the money, no questions asked.</li>
+						<li>LARGE KIT – Moss (Reindeer Moss, Forest Moss & Lichen), 12 oz. Potting Soil Blended with Activated Charcoal, Gardening Vermiculite, 12 oz. Pea Pebbles & River Stones, 1 oz. Plant Food, Finishing Tools, Miniature Dinos</li>
+						<li>BUILD & CARE - Includes a bamboo stick and natural hair brush finishing tools, plus helpful tips on building the perfect terrarium or planter</li>
+						<li>QUICK START – Just add your own plants and container</li>
+						<li>VALUE – Save when compared to buying individual materials</li>
+						<li>CUTE FARMS SALE – Buy Any Two Cute Farms Products, Save 10% Automatically!</li>
                     </ul>
 				</div>
             </div>
