Added product pages

--- a/product11.html
+++ b/product11.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Mini Ferns for Terrariums/Fairy Garden - Store - Rainier Terrariums</title>
+		<title>H Potter Terrarium Kit Succulent Soil Supplies - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,19 +59,19 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product9.png" alt="Mini Ferns for Terrariums/Fairy Garden" class="product-pg-img">
+				<img src="images/product11.jpg" alt="H Potter Terrarium Kit Succulent Soil Supplies" class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>Mini Ferns for Terrariums/Fairy Garden - 5 Different Plants-2" Pots</h2>
-					<h2 style="float: left">$14.99</h2>
-					<a href="https://amzn.to/2VfXNVj" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<h2>H Potter Terrarium Kit Succulent Soil Supplies for Plants Cactus Planters for Kids with Activated Charcoal</h2>
+					<h2 style="float: left">$16.95</h2>
+					<a href="https://amzn.to/2HNqOQp" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>The mini fern assortment varies with the season</li>
-						<li>Trim as needed</li>
-						<li>Easy to grow</li>
-						<li>Excellent for terrariums</li>
-						<li>You will receive 5 different mini ferns growing in 2" pots</li>
+						<li>H Potter presents their new premium terrarium planting kit, offering everything a terrarium builder needs in one complete starter kit. Gift box and canvas bags create a beautiful gift.</li>
+						<li>Small Terrarium Kit includes the following supplies: pea gravel (approximately 11 oz), activated charcoal (approximately 1.5 oz), and soil (approximately 7 oz), along with detailed planting and care instructions.</li>
+						<li>Everything you need to create your own miniature garden arrives in one box.</li>
+						<li>This small terrarium kit is designed to fit H Potter terrariums SKUs 65-1R, 65-7R, WAR146, WAR147, WAR148 and WAR151, if you are using another container please refer to our terrarium sizes for a comparison. A medium and large terrarium planting kit are also available from H Potter.</li>
+						<li>Made in the USA by H Potter, continually bringing you high quality products designed to last.</li>
                     </ul>
 				</div>
             </div>
